Prototype to fix Shift-J/K selection with anchor and cursor
related to #707

--- a/notebook/static/notebook/less/notebook.less
+++ b/notebook/static/notebook/less/notebook.less
@@ -6,6 +6,14 @@
     }
 }
 
+.jupyter-anchor{
+    background-color: cyan;
+}
+
+div.cell.jupyter-soft-selected {
+    border: purple thin solid;
+}
+
 #ipython-main-app {
     .border-box-sizing();
     height: 100%;
